@@ -127,6 +127,7 @@ CREATE TABLE customers (
   zip varchar(10) 	NOT NULL DEFAULT '',
   city varchar(32) 	NOT NULL DEFAULT '',
   countryid int(11)	DEFAULT NULL,
+  post_name varchar(255) DEFAULT NULL,
   post_address varchar(255) DEFAULT NULL,
   post_zip varchar(10) 	    DEFAULT NULL,
   post_city varchar(32) 	DEFAULT NULL,
