@@ -75,12 +75,13 @@ switch($mode)
 	case 'customer':
 		if(isset($_GET['ajax'])) // support for AutoSuggest
 		{
-			$candidates = $DB->GetAll('SELECT id, email, address, post_address, deleted,
+			$candidates = $DB->GetAll('SELECT id, email, address, post_name, post_address, deleted,
 			    '.$DB->Concat('UPPER(lastname)',"' '",'name').' AS username
 				FROM customersview
 				WHERE '.(preg_match('/^[0-9]+$/', $search) ? 'id = '.intval($search).' OR ' : '').'
 					LOWER('.$DB->Concat('lastname',"' '",'name').') ?LIKE? LOWER(\'%'.$search.'%\')
 					OR LOWER(address) ?LIKE? LOWER(\'%'.$search.'%\')
+					OR LOWER(post_name) ?LIKE? LOWER(\'%'.$search.'%\')
 					OR LOWER(post_address) ?LIKE? LOWER(\'%'.$search.'%\')
 					OR LOWER(email) ?LIKE? LOWER(\'%'.$search.'%\')
 				ORDER by deleted, username, email, address
@@ -103,6 +104,10 @@ switch($mode)
 				}
 				if (preg_match("~$search~i",$row['address'])) {
 				    $descriptions[$row['id']] = escape_js(trans('Address:').' '.$row['address']);
+				    continue;
+				}
+				else if (preg_match("~$search~i",$row['post_name'])) {
+				    $descriptions[$row['id']] = escape_js(trans('Name:').' '.$row['post_name']);
 				    continue;
 				}
 				else if (preg_match("~$search~i",$row['post_address'])) {
