@@ -148,6 +148,10 @@
 					<TD width="99%" nowrap>
 						<TABLE width="100%" cellpadding="2" cellspacing="0">
 						    <TR>
+							<TD width="1%" NOWRAP>{t}Name:{/t}</TD>
+							<TD width="99%"><INPUT TYPE="text" size="30" value="{$customeradd.post_name}" name="customeradd[post_name]" id="post_name" {tip text="Enter service name (optional)" trigger="post_name"}></TD>
+						    </TR>
+						    <TR>
 							<TD width="1%" NOWRAP>{t}Address:{/t}</TD>
 							<TD width="99%"><INPUT TYPE="text" size="30" value="{$customeradd.post_address}" name="customeradd[post_address]" id="post_address" {tip text="Enter service address (optional)" trigger="post_address"}></TD>
 						    </TR>
