@@ -54,13 +54,14 @@
 			{if $customerinfo.country}<BR>{t}{$customerinfo.country}{/t}{/if}
 		</TD>
 	</TR>
-{if $customerinfo.post_address neq ""}
+{if $customerinfo.post_name neq "" || $customerinfo.post_address neq ""}
 	<TR CLASS="LIGHT">
 		<TD WIDTH="1%">
 			<IMG SRC="img/post.gif" ALT="">
 		</TD>
 		<TD WIDTH="99%" COLSPAN="2">
-			{$customerinfo.post_address}<BR>
+			{if $customerinfo.post_name neq ""}{$customerinfo.post_name}{/if}
+			{if $customerinfo.post_address neq ""}<BR>{$customerinfo.post_address}{/if}
 			{$customerinfo.post_zip} {$customerinfo.post_city}
 			{if $customerinfo.post_cstate}<BR>{$customerinfo.post_cstate}{/if}
 			{if $customerinfo.post_country}<BR>{t}{$customerinfo.post_country}{/t}{/if}
